# AI_Systems_Architect_Lab

./: .gitattributes  .gitignore  LICENSE  README.md
Project_01_Resume_Knowledge_Assistant/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
Project_01_Resume_Knowledge_Assistant/.github/workflows/: ci.yaml
Project_01_Resume_Knowledge_Assistant/data/faiss/: index.faiss  metadata.pkl
Project_01_Resume_Knowledge_Assistant/requirements/: base.txt
Project_01_Resume_Knowledge_Assistant/src/: bootstrap.py  config.py
Project_01_Resume_Knowledge_Assistant/src/api/: app.py  routes.py  schemas.py
Project_01_Resume_Knowledge_Assistant/src/app/: resume_assistant.py
Project_01_Resume_Knowledge_Assistant/src/embeddings/: vector_store.py
Project_01_Resume_Knowledge_Assistant/src/llm/: gemini_client.py
Project_01_Resume_Knowledge_Assistant/src/loaders/: document_loader.py
Project_01_Resume_Knowledge_Assistant/src/logger/: __init__.py  logger.py
Project_01_Resume_Knowledge_Assistant/src/memory/: conversation_memory.py
Project_01_Resume_Knowledge_Assistant/src/models/: __init__.py  assistant.py  debug.py  model_info.py  retrieval.py  system.py
Project_01_Resume_Knowledge_Assistant/src/prompts/: prompts.py
Project_01_Resume_Knowledge_Assistant/src/retrieval/: compressor.py  metadata_filter.py  parent_retriever.py  reranker.py  (+2 more)
Project_01_Resume_Knowledge_Assistant/tests/: test_cases.py  test_runner.py
Project_01_Resume_Knowledge_Assistant/ui/: app_state.py  quick_questions.py  streamlit_app.py
(+42 files in other folders)
